# lite-wiki

./: .gitignore  README.md  docker-compose.yml  setup_litewiki.sh
backend/: .dockerignore  .env  .env.test  Cargo.toml  Dockerfile  entrypoint.sh
backend/data/: settings.json  users.json
backend/data/config/: settings.json
backend/data/docs/: lite-wiki.md
backend/src/: config.rs  handlers.rs  lib.rs  main.rs  routes.rs  storage.rs  test_utils.rs  utils.rs
backend/src/auth/: github.rs  jwt.rs  login.rs  logout.rs  mod.rs  password.rs  signup.rs  storage.rs  user.rs
backend/src/handlers/: admin.rs  api.rs  auth.rs  docs.rs  html_render.rs  image.rs  mod.rs  random.rs  redirect.rs  search.rs  templates.rs  view.rs
backend/src/storage/: docs.rs  file.rs  metadata.rs  mod.rs  path.rs  templates.rs
backend/static/css/: style.css
backend/static/html/: admin.html  create.html  doc_list.html  editor.html  history_section.html  layout.html  login.html  search_empty.html  search_no_input.html  search_result.html  search_tag.html  signup.html  tag_list.html  template.html  template_list.html  user_info.html  viewer.html
data/config/: users.json
