[package]
name = "lite-wiki-backend"
version = "0.1.0"
edition = "2024"
authors = ["Yyoung"]

[dependencies]
# 비동기 런타임
tokio = { version = "1.36", features = ["full"] }
# 웹 서버 프레임워크
axum = "0.7"
# JSON 직렬화/역직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 파일 시스템 기반 로깅
tracing = "0.1"
tracing-subscriber = "0.3"
# markdwon HTML 변환
pulldown-cmark = "0.9"
# 현재 시간
chrono = { version = "0.4", features = ["serde"] }
# 변경내용 추적
similar = "2"
# HTML escape
html-escape = "0.2"
# .env
dotenv = "0.15"
# 전역 상수
once_cell = "1.18"