[package]
name = "lite-wiki-backend"
version = "0.1.0"
edition = "2024"
authors = ["Yyoung"]

[dependencies]
# 비동기 런타임
tokio = { version = "1.36", features = ["full"] }
# 웹 서버 프레임워크
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = "0.4"
headers = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "limit"] }
# JSON 직렬화/역직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 파일 시스템 기반 로깅
tracing = "0.1"
tracing-subscriber = "0.3"
# 현재 시간
chrono = { version = "0.4", features = ["serde"] }
# 변경내용 추적
similar = "2"
# HTML escape
html-escape = "0.2"
# .env
dotenvy = "0.15"
# 전역 상수
once_cell = "1.18"
# hash
argon2 = { version = "0.5", features = ["password-hash", "std"]}
password-hash = "0.5"
# JWT token
jsonwebtoken = "8.2"
# 쿠키
cookie = "0.18"
# 랜덤
rand = "0.8"
# 난수 생성
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
# 이미지 서빙
mime_guess = "2.0"
# 이미지 변환
regex = "1.10"